--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     background-color: #282828;
-    box-shadow: 0 1px 0 rgb(0 203 255 / 10%);
+    box-shadow: 0 1px 0 rgb(255 165 0 / 30%);
     padding: 20px;
     height: 150px;
 }
@@ -12,4 +12,17 @@
     display: flex;
     justify-content: center;
     gap: 30px;
+}
+
+.link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
+.active {
+    color: orange;
 }
