--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -1,8 +1,9 @@
 .container {
     display: grid;
-        grid-template-columns: repeat(auto-fit, 200px);
-        gap: 16px;
-        margin: 50px;
+    grid-template-columns: repeat(auto-fit, 200px);
+    gap: 16px;
+     padding: 40px;
+    justify-content: center;
 }
 
 .cardWrapper {
