--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,9 +3,10 @@
     justify-content: center;
     align-items: center;
     background-color: #282828;
-    box-shadow: 0 1px 0 rgb(255 165 0 / 30%);
+    box-shadow: 1px 2px 2px rgb(255 165 0 / 30%);
     padding: 20px;
-    height: 150px;
+    height: 60px;
+    margin-bottom: 40px;
 }
 
 .nav {
