--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -7,8 +7,9 @@ padding: 8px 12px;
     background-color: transparent;
     color: white;
     border: 1px solid orange;
-    transition: all cubic-bezier(0.2);
-    }
+    transition: border 200ms ease-out;
+    margin: 0px 0px 20px 20px;
+}
     
 .backBtn:hover,
 .backBtn:active,
@@ -19,11 +20,7 @@ padding: 8px 12px;
 
 h1 {
     text-align: center;
-}
-
-.titleWrapper {
-    padding: 8px;
-    margin: 8px;
+    margin-bottom: 20px;
 }
 
 .imgWrapper {
@@ -32,31 +29,35 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 30px;
-    margin-top: 40px;
     margin-bottom: 40px;
 }
 
 .imgMovie {
-    width: 300px;
+    width: 250px;
 }
 
 .movieDescr {
     width: 30%;
-    font-size: larger;
+    font-size: 18px;
 }
 
 .navBarCastReviews {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    box-shadow: 0px 0px 4px 4px rgb(255 165 0 / 30%);
     text-align: center;
     padding: 18px;
 }
 
 .linkNavBar {
     font-weight: 500;
-    font-size: large;
+    font-size: 24px;
     color: white;
 }
 
 .linkNavBar:hover,
 .linkNavBar:focus {
+    text-decoration: underline;
     color: orange;
 }
